--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Maasser - Suivi de votre dîme",
+  "name": "Give Maasser",
   "short_name": "Maasser",
   "description": "Application de suivi du Maasser (10% des revenus) dans la tradition juive",
   "start_url": "/",
