--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,17 @@ on:
     branches: [ main ]
 
 jobs:
+  build:
+      runs-on: ubuntu-latest
+      env:
+        VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
+        VITE_SUPABASE_PUBLISHABLE_KEY: ${{ secrets.VITE_SUPABASE_PUBLISHABLE_KEY }}
+      steps:
+        - uses: actions/checkout@v4
+        - name: Install deps
+          run: npm ci
+        - name: Build
+          run: npm run build
   deploy:
     runs-on: ubuntu-latest
     steps:
@@ -17,12 +28,6 @@ jobs:
       
       - name: Install dependencies
         run: npm ci
-      
-      - name: Build
-        env:
-          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
-          VITE_SUPABASE_PUBLISHABLE_KEY: ${{ secrets.VITE_SUPABASE_PUBLISHABLE_KEY }}
-        run: npm run build
       
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
